--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,14 +1,16 @@
 <div class="form-container mat-elevation-z5">
-  <h1>Sign Up to Get Your Bank at Your Fingertips!</h1>
+  <div>
+    <h2>Get your Bank </h2><h1>in Your Hands!</h1>
+  </div>
   <form [formGroup]="signUpForm" (ngSubmit)="submit()">
     <mat-form-field>
-      <input matInput placeholder="Ex., John" type="text" formControlName="firstName">
+      <input matInput placeholder="First Name" type="text" formControlName="firstName">
       <mat-error *ngIf="firstName?.errors?.['required']">
         First name is required
       </mat-error>
     </mat-form-field>
     <mat-form-field>
-      <input matInput placeholder="Ex., Smith" type="text" formControlName="lastName">
+      <input matInput placeholder="Last Name" type="text" formControlName="lastName">
       <mat-error *ngIf="lastName?.errors?.['required']">
         Last name is required
       </mat-error>
@@ -22,15 +24,6 @@
         Please enter a valid email address
       </mat-error>
     </mat-form-field>
-    <!-- <mat-form-field>
-      <input matInput placeholder="Mobile No." type="number" formControlName="mobile">
-      <mat-error *ngIf="mobile?.errors?.['required']">
-        Phone number is required
-      </mat-error>
-      <mat-error *ngIf="mobile?.errors?.['maxLength(10)']">
-        Please enter a valid phone number (10 digits)
-      </mat-error>
-    </mat-form-field> -->
     <mat-form-field color="primary">
       <input matInput type="password" placeholder="Password" formControlName="password">
       <mat-error *ngIf="password?.errors?.['required']">
@@ -53,7 +46,7 @@
     </div>
     <span class="center margin-top">
       Already a user?
-      <a class="sign-up-link" routerLink="/login">
+      <a class="sign-up-link" routerLink="/login" >
          Log in!
       </a>
     </span>
